upload current version of lab 7

--- a/week7/heap-sort/makefile
+++ b/week7/heap-sort/makefile
@@ -1,6 +1,6 @@
-cpp=main.cpp Heap.cpp
+cpp=driver.cpp HeapSort.cpp
 args=-Wall -Wextra -Werror
-out=heap.exe
+out=heapsort.exe
 comp=$(args) $(cpp) -o $(out)
 
 clang:
